View Issue Details

IDProjectCategoryView StatusLast Update
0031312Open CASCADEOCCT:Data Exchangepublic2020-12-02 17:12
Reporterkgv Assigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Product Version7.4.0 
Target Version7.5.0Fixed in Version7.5.0 
Summary0031312: Data Exchange - RWGltf_CafReader fails reading texture embedded into base64 bufferView
DescriptionBlender generated glTF files with textures embedded in non-standard way - it creates a single base64-encoded Buffer which is referred with offset for both vertex data and image data.

At the same time, spec suggests that base64-encoded images should be stored within "uri". So that although Blender encoding follows general logic for encoding base64 data via buffer views, it is unclear if such encoding for images complies or violates specs.

Nevertheless, it is desired to handle such use case.
Currently, RWGltf_CafReader ignores texture data from such files without emitting any error message.
TagsNo tags attached.
Test case numberde_mesh/gltf_read/cubeemb

Attached Files

  • bug31312_cube_emb.gltf (8,612 bytes)

Relationships

child of 0030691 closedbugmaster Data Exchange - implement import of mesh data from files in glTF format 

Activities

kgv

2020-01-22 20:18

developer  

bug31312_cube_emb.gltf (8,612 bytes)

git

2020-01-22 20:27

administrator   ~0089994

Branch CR31312 has been created by kgv.

SHA-1: bfc30a6d3d4a70220738ccd292b68e57fa1d6d2f


Detailed log of new commits:

Author: kgv
Date: Wed Jan 22 20:18:44 2020 +0300

    0031312: Data Exchange - RWGltf_CafReader fails reading texture embedded into base64 bufferView
    
    RWGltf_GltfJsonParser::gltfParseTexture() now handles images embedded into bufferView of non-glb file.

Author: mzernova
Date: Mon Jan 13 10:21:10 2020 +0300

    0031279: Visualization, TKOpenGl - environment background is misplaced within Ray-Tracing
    
    Fixed problem with misplacing background texture in Ray-Tracing.

git

2020-01-22 20:40

administrator   ~0089995

Branch CR31312 has been updated forcibly by kgv.

SHA-1: edcfb06c07c4427f24610dc7e3f1ef5fab252f82

git

2020-01-22 22:29

administrator   ~0089998

Branch CR31312 has been updated forcibly by kgv.

SHA-1: b33bf4d2d4e4f52d3aac23d8741fb70aa13da59a

git

2020-01-22 22:33

administrator   ~0089999

Branch CR31312 has been updated forcibly by kgv.

SHA-1: 75e90305d15d2b85cf4fb8aec169c6840b2bef37

kgv

2020-01-22 23:08

developer   ~0090000

Patch is ready for review.

osa

2020-01-23 17:40

developer   ~0090028

The patch was reviewed without remarks

git

2020-01-25 13:26

administrator   ~0090060

Branch CR31312 has been deleted by inv.

SHA-1: 75e90305d15d2b85cf4fb8aec169c6840b2bef37

Related Changesets

occt: master 6216ed57

2020-01-22 17:18:44

kgv


Committer: bugmaster Details Diff
0031312: Data Exchange - RWGltf_CafReader fails reading texture embedded into base64 bufferView

RWGltf_GltfJsonParser::gltfParseTexture() now handles images embedded into bufferView of non-glb file.
Affected Issues
0031312
mod - src/RWGltf/RWGltf_GltfJsonParser.cxx Diff File
mod - src/RWGltf/RWGltf_GltfJsonParser.pxx Diff File
add - tests/de_mesh/gltf_read/cubeemb Diff File

Issue History

Date Modified Username Field Change
2020-01-22 20:10 kgv New Issue
2020-01-22 20:10 kgv Assigned To => kgv
2020-01-22 20:18 kgv File Added: bug31312_cube_emb.gltf
2020-01-22 20:27 git Note Added: 0089994
2020-01-22 20:40 git Note Added: 0089995
2020-01-22 22:29 git Note Added: 0089998
2020-01-22 22:33 git Note Added: 0089999
2020-01-22 23:08 kgv Note Added: 0090000
2020-01-22 23:08 kgv Assigned To kgv => osa
2020-01-22 23:08 kgv Status new => resolved
2020-01-22 23:08 kgv Relationship added child of 0030691
2020-01-23 17:40 osa Note Added: 0090028
2020-01-23 17:40 osa Assigned To osa => bugmaster
2020-01-23 17:40 osa Status resolved => reviewed
2020-01-23 18:15 bugmaster Test case number => de_mesh/gltf_read/cubeemb
2020-01-24 17:13 bugmaster Status reviewed => tested
2020-01-25 13:09 bugmaster Changeset attached => occt master 6216ed57
2020-01-25 13:09 bugmaster Status tested => verified
2020-01-25 13:09 bugmaster Resolution open => fixed
2020-01-25 13:26 git Note Added: 0090060
2020-12-02 16:41 emo Fixed in Version => 7.5.0
2020-12-02 17:12 emo Status verified => closed